--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,8 +9,8 @@ $container-max-widths: (
 );
 
 // Required
-@import "~/bootstrap/scss/functions";
-@import "~/bootstrap/scss/variables";
-@import "~/bootstrap/scss/mixins";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
 
-@import "~/bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";
